Alteração nome na pagina inicial

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="container">
         <div class="row justify-content-center" data-aos="zoom-out">
           <div class="col-xl-7 col-lg-9 text-center">
-            <h1>Leonardo Paixão, Desenvolvedor Front-end & Dados</h1>
+            <h1> Desenvolvedor Front-end<br> & Dados</h1>
             <p>Transformando dados e interfaces em experiências incríveis.</p>
           </div>
         </div>
