--- a/index.html
+++ b/index.html
@@ -286,13 +286,29 @@
               <p>Fundamentos de Machine Learning</p>
               <a href="https://drive.google.com/file/d/1cXXGaJc6N0FraFoVkEKX-gYVLYXmBTS9/view?usp=drive_link" class="btn-project" target="_blank">Ver no Google Drive</a>
           </div>
-            <!-- Certificado 01 -->
+            <!-- Certificado 08 -->
             <div class="certificate-card">
               <a href="assets/img/certificados/c8.png" target="_blank">
                   <img src="assets/img/certificados/c8.png" alt="Certificado 1" class="certificate-img">
               </a>
               <p>Programação e Pensamento Computacional</p>
               <a href="https://drive.google.com/file/d/1P_CwzZE66iRzdCn7GQHKSTK5oB2BxljV/view?usp=drive_link" class="btn-project" target="_blank">Ver no Google Drive</a>
+          </div>
+            <!-- Certificado 09 -->
+            <div class="certificate-card">
+              <a href="assets/img/certificados/c9.png" target="_blank">
+                  <img src="assets/img/certificados/c9.png" alt="Certificado 1" class="certificate-img">
+              </a>
+              <p>Introdução à Análise de Dados com Power BI com a Suzano</p>
+              <a href="https://drive.google.com/file/d/1FtgNdlhuJWK5e8DOeEP2YnzEQiCr9hJO/view?usp=sharing" class="btn-project" target="_blank">Ver no Google Drive</a>
+          </div>
+            <!-- Certificado 10 -->
+            <div class="certificate-card">
+              <a href="assets/img/certificados/c10.png" target="_blank">
+                  <img src="assets/img/certificados/c10.png" alt="Certificado 1" class="certificate-img">
+              </a>
+              <p>Criando um Pacote de Processamento de imagens com Python</p>
+              <a href="https://drive.google.com/file/d/1Zcdp907wMJiO_qEIzCsQhvYIUA0dj2rE/view?usp=sharing" class="btn-project" target="_blank">Ver no Google Drive</a>
           </div>
       </div>
       <br>
